src/sass/components/_slider.scss
@mixin sliderBg-Gradinets {
  background: -webkit-linear-gradient(322deg, rgb(255, 39, 68) 0%, rgb(255, 31, 89) 100%);
  background: -o-linear-gradient(322deg, rgb(255, 39, 68) 0%, rgb(255, 31, 89) 100%);
  background: -ms-linear-gradient(322deg, rgb(255, 39, 68) 0%, rgb(255, 31, 89) 100%);
  background: -moz-linear-gradient(322deg, rgb(255, 39, 68) 0%, rgb(255, 31, 89) 100%);
  background: linear-gradient(128deg, rgb(255, 39, 68) 0%, rgb(255, 31, 89) 100%);
}


.slider-container {
  &--wrap {
    width: 100%;
    position: relative;
    //height: 180px;
    //max-height: 502px;
    //height: 502px;
    background: transparent;
    //@include sliderBg-Gradinets;

    @include max-min(max toPx($device-small-laptop)) {
      height: 510px;
    }

    @include max-min(max toPx($device-tablet)) {
      height: initial;
    }


    @include max-min(min toPx($device-medium-laptop)) {
      height: 321px;
    }

    @include max-min(min toPx($device-big-laptop)) {
      height: 502px;
    }

    @include max-min(min toPx($device-medium-laptop), max toPx(1920)) {
      height: initial;
    }

  }

  .slider-bg {
    position: absolute;
    top: 0;
    left: 0;
    @include size(100%);
    //padding-top: 2rem;
    display: none;
    z-index: 0;

    @include max-min(min toPx($device-tablet + 1)) {
      display: block;
    }

    &:after {
      content: '';
      display: block;
      @include size(100%);
      @include sliderBg-Gradinets;
    }
  }

  .slider-content {
    width: 100%;
    height: 100%;
    @include flex;
    @include flex-direction(column);

    @include max-min(min toPx($device-tablet + 1)) {
      @include flex-direction(row);
    }

    .image-side {
      position: relative;
      //@include sliderBg-Gradinets;
      //height: 100%;
      flex: 1;
      //width: 52vh;
      margin-top: -2rem;
      z-index: 0;

      @include max-min(min toPx($device-tablet + 1)) {
        background: transparent;
        margin-top: initial;
      }

      .slider-image-bg {
        position: absolute;
        top: 0;
        left: 0;
        z-index: -1;
        @include size(100%);
        padding-top: 2rem;

        &:after {
          content: '';
          display: block;
          @include size(100%);
          @include sliderBg-Gradinets;
        }

        &:before {
          content: '';
          background-color: #f82754;
          width: 50px;
          display: block;
          position: absolute;
          top: 2rem;
          left: 99%;
          height: calc(100% - 2rem);
        }

        @include max-min(min toPx($device-tablet + 1)) {
          display: none;
        }

      }

      .image-area {
        @include size(100%);
        @include flex;
        @include align-items(flex-end);
        @include justify-content(center);
        padding-top: 12px;

        @include max-min(min toPx($device-tablet + 1)) {
          margin-bottom: -2.6rem;
        }

        @include max-min(max toPx($device-big-laptop)) {
          @include justify-content(flex-end);
        }

        img {
          //min-height: 100%;
          max-width: 100%;
          display: block;
        }
      }

      .n-image-area {
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
        top: 0;

        img {
          //min-height: 100%;
          max-width: 100%;
          display: block;
        }
      }
    }

    .slider-text {
      &--main {
        font-family: $D-DINCondensed;
        color: $oc-white;
        @include flex;
        @include align-items(center);
        padding: 30px;
        flex: 1;

        @include max-min(max toPx($device-tablet + 1)) {
          padding-left: 0;
          padding-right: 0;
        }
      }

      &--new {
        position: absolute;
        left: 0;
        top: 50%;
        transform: translateY(-50%);


        @include max-min(max toPx($device-tablet + 1)) {
          position: relative;
          transform: translateY(0);
          margin-top: 30px;
        }
      }

      .content {
        width: 100%;

        .btn-area {
          > * {
            margin-left: 20px;
            @include max-min(max toPx($device-tablet)) {
              margin-left: 0;
              margin-top: 20px;
            }

            &:first-child {
              margin-left: 0;
              @include max-min(max toPx($device-tablet)) {
                margin-left: 0;
                margin-top: 0;
              }
            }
          }

          @include max-min(max toPx($device-tablet + 1)) {
            @include flex;
            @include flex-direction(column);
          }
        }
      }

      .title {
        font-size: 41px;
        font-family: $D-DINCondensed;
        line-height: 44px;

        b {
          font-family: $D-DIN-Bold;
        }
      }

      .text {
        font-size: 26px;
        line-height: 30px;
        margin-top: 35px;
        margin-bottom: 40px;

        @include max-min(max toPx($device-tablet + 1)) {
          margin-top: 20px;
          margin-bottom: 40px;
        }
      }

      @include max-min(min toPx($device-tablet + 1)) {
        color: $color-dark-2;
        padding-left: 100px;
      }
    }
  }

  .insider {
    position: relative;
    @include max-min(min toPx($device-tablet)) {
      margin-left: 125px;

    }

  }

  .fifa-logo {
    position: absolute;
    top: 239px;
    right:  -230px;
    z-index: -1;
    display: block;

    @include max-min(max toPx($device-big-laptop)) {
      display: none;

    }

    img {
      height: 100%;
      display: block;
    }
  }

  .available-content {
    padding: 30px 0 30px 0;
    display: none;


    @include max-min(min toPx($device-tablet + 1)) {
      @include flex;
      @include flex-direction(column);
      @include align-items(flex-start);
    }

    .platform-title {
      font-family: $D-DINCondensed;
      font-size: 19px;
      margin-bottom: 12px;
    }

    .platform-list {
      @include flex;
      @include align-items(center);
      @include justify-content(center);
      > * {
        margin-left: 30px;
        &:first-child {
          margin-left: 0;
        }
      }
    }

    .platform-item {
      @include flex-all;

      img {
        height: 100%;
        display: block;
      }
    }
  }

  .btn-area {
    @include max-min(min toPx($device-tablet + 1)) {
      .btn {
        &--simple {
          width: 200px;
        }
      }
    }
  }

}

